css/estilos.css
body
{
    background-color: #1e1f24;
    color: #333;
    text-align:center;
    font-family: Arial;
    font-size: 16px;
    margin: 0;
    padding: 0;
}

#cabecera
{
    background:#37488b;
    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
    color: white;
    font-weight: bold;
    margin: 0;
    padding: 0.5em;
}

#cabecera #logo
{
    width: 20px;
    vertical-align: middle;/*ðis aligns your image or logo to ðe text next to it.*/
}

#cabecera #tagline
{
    padding: 0 0 0 1em;
    font-weight: normal;
    font-size: 0.8em;
}

#container
{
    width:70%;
    padding: 0;
    text-align: left;
    border: 1px solid #DDD;
    margin: 0 auto;
}

#container h1
{
    font-size:20px;
}
#post
{
    background: white;
    padding: 1em;
}

#footer
{
    background: #777;
    color: white;
    text-align: center;
    padding: 0.5em;
}

